# hazelnut

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  tidy-features.tape  tidy-readme.tape  tidy-themes.tape
.changeset/: brave-adults-exist.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  installation.md
src/: daemon.rs  lib.rs  main.rs  notifications.rs  theme.rs
src/app/: events.rs  mod.rs  state.rs  tui.rs  ui.rs
src/config/: mod.rs  schema.rs
src/ipc/: mod.rs
src/rules/: action.rs  condition.rs  engine.rs  mod.rs
src/watcher/: handler.rs  mod.rs
website/: README.md  astro.config.mjs  package-lock.json
website/public/: CNAME  llms.txt  robots.txt  sitemap.xml
website/public/.well-known/: llms.txt
website/src/layouts/: Layout.astro
website/src/pages/: docs.astro  index.astro
