[package]
name = "tidy"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Ricardo Dantas"]
description = "A terminal-based automated file organizer inspired by Hazel"
license = "MIT"
repository = "https://github.com/ricardodantas/tidy"
keywords = ["tui", "file-organizer", "automation", "cli", "terminal"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# File watching
notify = "9.0.0-rc.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
dirs = "6.0"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.11"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.19"
assert_fs = "1.1"
predicates = "3.1"

[[bin]]
name = "tidy"
path = "src/main.rs"

[[bin]]
name = "tidyd"
path = "src/daemon.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
